Added blood glucose convertor

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -70,6 +70,7 @@
           <ul class="dropdown-menu" aria-labelledby="scienceDropdown">
             <li><a class="dropdown-item" href="/views/science.html">The Science</a></li>
             <li><a class="dropdown-item" href="/views/layouts/recipes/science/science_articles.html">Science Articles</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/science/convertor.html">Blood Glucose Convertor</a></li>
           </ul>
         </li>
 
