--- a/public/styles/science/science.css
+++ b/public/styles/science/science.css
@@ -65,3 +65,10 @@
     display: block;
     /* Ensures the button stays block level to center properly */
 }
+
+/* Icons On Science */
+.sci-icon {
+    width: 24px;
+    height: 24px;
+}
+
