Updates science articles links

--- a/views/layouts/recipes/science/convertor.html
+++ b/views/layouts/recipes/science/convertor.html
@@ -60,7 +60,7 @@
         <div class="col-md-6 text-center">
             <h2>Blood Sugar Conversion Calculator</h2>
             <p>Easily convert between mmol/L, mg/dL, and HbA1c units.</p>
-            <p><em>Learn more here: <a href="views\layouts\recipes\science\units.html" title="Blood Glucose Conversions Link"></a>Blood Glucose Units</em></p>
+            <p><em>Learn more here: <a href="/views/layouts/recipes/science/units.html" title="Blood Glucose Conversions Link">Blood Glucose Units</a></em></p>
 
             <!-- mmol/L to mg/dL Conversion Form Start -->
             <div class="conversion-calculator">
