Fixed noopener on header

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -84,26 +84,26 @@
 
       <!-- Social Media Icons -->
       <div class="social-icons ms-auto">
-        <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank" class="social-icon mx-2">
+        <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
         </a>
-        <a href="https://instagram.com" class="social-icon mx-2">
+        <a href="https://instagram.com" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
         </a>
-        <a href="https://twitter.com" class="social-icon mx-2">
+        <a href="https://twitter.com" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/x.svg" alt="Twitter (X)" width="24" height="24" />
         </a>
-        <a href="mailto:trnsc.health@gmail.com" class="social-icon mx-2">
+        <a href="mailto:trnsc.health@gmail.com" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/email.svg" alt="Email" width="24" height="24" />
         </a>
       </div>
 
       <!-- Donation Buttons -->
       <div class="donation-buttons ms-auto">
-        <a href="https://paypal.me/realnakedswedishchef?country.x=SE&locale.x=en_US" target="_blank" class="btn btn-outline-secondary btn-sm mx-2 mb-1">Donate via
+        <a href="https://paypal.me/realnakedswedishchef?country.x=SE&locale.x=en_US" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm mx-2 mb-1">Donate via
           <img src="/public/images/icons/paypal.svg" alt="Donate via PayPal" width="48" height="48" />
         </a>
-        <a href="https://wise.com/pay/me/pauld4498" target="_blank" class="btn btn-outline-secondary btn-sm mx-2">Donate via
+        <a href="https://wise.com/pay/me/pauld4498" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm mx-2">Donate via
           <img src="/public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
         </a>
       </div>
