Adding Google Tracking Analytics

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -74,6 +74,11 @@
           </ul>
         </li>
 
+        <!-- Merchandise Link -->
+        <li class="nav-item">
+          <a class="nav-link" href="/views/merchandise.html">Merchandise <img src="/public/images/icons/sunglasses.svg" alt="sunglasses"></a>
+        </li>
+
       </ul>
 
     <form class="d-flex mx-auto search-width" onsubmit="handleSearch(event)">
