--- a/views/merchandise.html
+++ b/views/merchandise.html
@@ -66,7 +66,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Coming Soon!</h5>
                         <p class="card-text">Get The Mech! All to be reveled soon!</p>
-                        <a href="#" target="_blank"
+                        <a href="#"
                             class="btn btn-primary">Shop Now</a>
                     </div>
                 </div>
