Fixed spelling error on merchandise page

--- a/views/merchandise.html
+++ b/views/merchandise.html
@@ -65,7 +65,7 @@
                         alt="The Real Naked Swedish Chef - Just Walk Away">
                     <div class="card-body">
                         <h5 class="card-title">Coming Soon!</h5>
-                        <p class="card-text">Get The Mech! All to be reveled soon!</p>
+                        <p class="card-text">Get The Mecrh! All to be reveled soon!</p>
                         <a href="#"
                             class="btn btn-primary">Shop Now</a>
                     </div>
