Updated SEO for chocolate with peanut butter

--- a/views/layouts/recipes/recipe_pages/cocoa_peanut_butter_chocolate.html
+++ b/views/layouts/recipes/recipe_pages/cocoa_peanut_butter_chocolate.html
@@ -21,6 +21,13 @@
 <meta name="twitter:image"
     content="/public/images/recipes/cocoa_peanut_butter_chocolate/cocoa_peanut_butter_chocolate.jpg" />
 
+<!-- SEO Meta Tags -->
+<meta name="description"
+    content="Learn how to make a rich and intense homemade 100% cocoa chocolate with a hint of peanut butter. Perfect for those who love unsweetened or low-carb chocolate." />
+<meta name="keywords"
+    content="homemade chocolate, 100% cocoa chocolate, unsweetened chocolate, keto chocolate recipe, vegan chocolate, sugar-free chocolate, cocoa nibs, cocoa butter, peanut butter" />
+<meta name="author" content="The Real Naked Swedish Chef" />
+
     <!-- Favicon -->
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
