Minor fixes to workplace settings

--- a/views/layouts/recipes/science/chocolate.html
+++ b/views/layouts/recipes/science/chocolate.html
@@ -179,13 +179,13 @@
                         <p>
                             1. Ludovici V, Barthelmes J, Nägele MP, Enseleit F, Ferri C, Flammer AJ, Ruschitzka F, Sudano I. Cocoa, Blood Pressure, and
                             Vascular Function. Front Nutr. 2017 Aug 2;4:36. doi: <a
-                                href="https://www.frontiersin.org/journals/nutrition/articles/10.3389/fnut.2017.00036/full" target="_blank">10.3389/fnut.2017.00036</a>. PMID: 28824916; PMCID: PMC5539137.
+                                href="https://www.frontiersin.org/journals/nutrition/articles/10.3389/fnut.2017.00036/full" target="_blank" rel="noopener">10.3389/fnut.2017.00036</a>. PMID: 28824916; PMCID: PMC5539137.
                         </p>
                         <p>
                             2. Ried
                                 Ried K, Fakler P, Stocks NP. Effect of cocoa on blood pressure. Cochrane Database Syst Rev. 2017 Apr 25;4(4):CD008893.
                                 doi: <a
-                                    href="https://www.cochrane.org/CD008893/HTN_effect-cocoa-blood-pressure#:~:text=This%20review%20provides%20moderate-quality%20evidence%20that" target="_blank">10.1002/14651858.CD008893.pub3.</a> PMID: 28439881; PMCID: PMC6478304.
+                                    href="https://www.cochrane.org/CD008893/HTN_effect-cocoa-blood-pressure#:~:text=This%20review%20provides%20moderate-quality%20evidence%20that" target="_blank" rel="noopener">10.1002/14651858.CD008893.pub3.</a> PMID: 28439881; PMCID: PMC6478304.
 
                         </p>
                     </div>
