--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -48,6 +48,7 @@
           <strong>Privacy Notice:</strong> This website does not use cookies or collect any personal data. For more
           information, feel free to contact us at <a href="mailto:trnsc.health@gmail.com">trnsc.health@gmail.com</a>.
         </p>
+        <p class="legal-disclaimer"><a href="/views/layouts/disclaimer.html">Full Disclaimer</a></p>
       </div>
     </div>
 
