--- a/views/layouts/disclaimer.html
+++ b/views/layouts/disclaimer.html
@@ -96,6 +96,11 @@
                     <p>Some images on the site are AI-generated to help keep the site free, but all the photos of
                         recipes I’ve made are real and taken by me, with no fancy studio involved. It’s just me, my
                         kitchen, and my camera.</p>
+                    <h3>10. Allergies</h3>
+                    <p>It is important for individuals to carefully review the ingredients used in each recipe to ensure they are safe to
+                        consume, based on personal dietary needs and allergies. While I do my best to provide healthy and balanced recipes,
+                        it’s up to you to verify if the ingredients fit your requirements. Always consult the ingredient labels for
+                        allergens before preparing any dish.</p>
                 </div>
             </div>
         </div>
