Added stories about stories

--- a/views/layouts/kitchen_tips/mandolin.html
+++ b/views/layouts/kitchen_tips/mandolin.html
@@ -81,7 +81,7 @@
 
             <!-- Mandolin Image with Amazon Affiliate Link -->
             <figure class="figure">
-                <a href="https://amzn.to/47TRbiU" target="_blank">
+                <a href="https://amzn.to/47TRbiU" target="_blank" rel="noopener">
                     <img src="/public/images/kitchen_tips/mandolin/mandolin.jpg" alt="Mandolin slicer slicing vegetables"
                         class="img-fluid rounded shadow my-3">
                 </a>
@@ -125,56 +125,43 @@
                 <ul>
                     <li>
                         <strong>Flat Handheld Mandolin:</strong> Compact and easy to use, the handheld mandolin is
-                        perfect for quick slicing. It’s lightweight and easy to store, making it ideal for small
-                        kitchens.
-                    <!-- Handheld Mandolin Image with Amazon Link and Caption -->
-                    <figure class="figure">
-                        <a href="https://amzn.to/3ByNdjE" target="_blank">
-                            <img src="/public/images/kitchen_tips/mandolin/mandolin2.jpg" alt="Handheld Mandolin Slicer"
-                                class="img-fluid rounded shadow my-2">
-                        </a>
-                        <figcaption class="figure-caption">
-                            <small><strong>Figure 3: Handheld Mandolin</strong> - <em>A quick and compact option for easy slicing. Click the
-                                    image to view on Amazon.</em></small>
-                        </figcaption>
-                    </figure>
+                        perfect for quick slicing. It’s lightweight and easy to store, making it ideal for small kitchens.
                     </li>
-
+                </ul>
+                
+                <!-- Handheld Mandolin Image with Amazon Link and Caption (outside <ul>) -->
+                <figure class="figure">
+                    <a href="https://amzn.to/3ByNdjE" target="_blank" rel="noopener">
+                        <img src="/public/images/kitchen_tips/mandolin/mandolin2.jpg" alt="Handheld Mandolin Slicer"
+                            class="img-fluid rounded shadow my-2">
+                    </a>
+                    <figcaption class="figure-caption">
+                        <small><strong>Figure 3: Handheld Mandolin</strong> - <em>A quick and compact option for easy slicing. Click the
+                                image to view on Amazon.</em></small>
+                    </figcaption>
+                </figure>
+                
+                <ul>
                     <li><strong>Adjustable Mandolin:</strong> If you want more versatility, go for an adjustable
                         mandolin with various thickness settings. Perfect for creating your own veggie fries or chips.
                     </li>
-
+                
                     <li><strong>Mandolin with Multiple Blades:</strong> These slicers offer a variety of blades for
                         different cuts, like crinkle or julienne, making them perfect for experimenting with textures.
-                        <!-- Mandolin with Multiple Blades Image with Amazon Link and Caption -->
-                        <figure class="figure">
-                            <a href="https://amzn.to/47TrIG8" target="_blank">
-                                <img src="/public/images/kitchen_tips/mandolin/mandolin3.jpg" alt="Mandolin with Multiple Blades"
-                                    class="img-fluid rounded shadow my-2">
-                            </a>
-                            <figcaption class="figure-caption">
-                                <small><strong>Figure 4: Mandolin with Multiple Blades</strong> - <em>An excellent choice for experimenting with
-                                        different textures and cuts. Click the image to view on Amazon.</em></small>
-                            </figcaption>
-                        </figure>
                     </li>
-
-                    <li><strong>Dishwasher Safe Mandolin:</strong> If ease of cleaning is important, consider a dishwasher-safe mandolin. It
-                        saves time and ensures you can quickly sanitize the blades without hassle.</li>
-                    
-                    <!-- Dishwasher Safe Mandolin Image with Amazon Link and Caption -->
-                    <figure class="figure">
-                        <a href="https://amzn.to/4h86Ijt" target="_blank">
-                            <img src="/public/images/kitchen_tips/mandolin/mandolin4.jpg" alt="Dishwasher Safe Mandolin Slicer"
-                                class="img-fluid rounded shadow my-2">
-                        </a>
-                        <figcaption class="figure-caption">
-                            <small><strong>Figure 5: Dishwasher Safe Mandolin</strong> - <em>An easy-to-clean option for quick kitchen prep.
-                                    Click the image to view on Amazon.</em></small>
-                        </figcaption>
-                    </figure>
-
                 </ul>
+                
+                <!-- Mandolin with Multiple Blades Image and Caption (outside <ul>) -->
+                <figure class="figure">
+                    <a href="https://amzn.to/47TrIG8" target="_blank" rel="noopener">
+                        <img src="/public/images/kitchen_tips/mandolin/mandolin3.jpg" alt="Mandolin with Multiple Blades"
+                            class="img-fluid rounded shadow my-2">
+                    </a>
+                    <figcaption class="figure-caption">
+                        <small><strong>Figure 4: Mandolin with Multiple Blades</strong> - <em>An excellent choice for experimenting with
+                                different textures and cuts. Click the image to view on Amazon.</em></small>
+                    </figcaption>
+                </figure>
 
                 <h3>Safety Tips</h3>
                 <p>
@@ -185,7 +172,7 @@
                 
                 <!-- Safety Gloves and Hand Guard Image with Amazon Link and Caption -->
                 <figure class="figure">
-                    <a href="https://amzn.to/47WY7Mb" target="_blank">
+                    <a href="https://amzn.to/47WY7Mb" target="_blank" rel="noopener">
                         <img src="/public/images/kitchen_tips/mandolin/mandolin5.jpg" alt="Mandolin Safety Gloves and Hand Guard"
                             class="img-fluid rounded shadow my-3">
                     </a>
