Update meta for keto meat pie dropping kiwi

--- a/views/layouts/recipes/recipe_pages/meat_pie.html
+++ b/views/layouts/recipes/recipe_pages/meat_pie.html
@@ -6,7 +6,7 @@
     <title>Keto Meat Pie : The Real Naked Swedish Chef</title>
     
     <!-- Dynamic Meta Tags for Open Graph and Twitter -->
-    <meta property="og:title" content="Kiwi Keto Meat Pie" />
+    <meta property="og:title" content="Keto Meat Pie" />
     <meta property="og:description"
         content="A savoury, low-carb Kiwi Keto Meat Pie made with beef mince, vegetables, and herbs. Perfect for those following a keto or gluten-free diet." />
     <meta property="og:image" content="/public/images/recipes/meat_pie/meat_pie.jpg" />
