Added header and footer instagram links

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -16,7 +16,7 @@
           <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" class="social-icon mx-2">
             <img src="/public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
           </a>
-          <a href="https://instagram.com" class="social-icon mx-2">
+          <a href="https://www.instagram.com/trnsc.health/" class="social-icon mx-2">
             <img src="/public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
           </a>
           <a href="https://twitter.com" class="social-icon mx-2">
