--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -92,7 +92,7 @@
         <a href="https://www.facebook.com/groups/the.real.naked.swedish.chef" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
         </a>
-        <a href="https://instagram.com" target="_blank" rel="noopener" class="social-icon mx-2">
+        <a href="https://www.instagram.com/trnsc.health/" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
         </a>
         <a href="https://twitter.com" target="_blank" rel="noopener" class="social-icon mx-2">
