--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -95,8 +95,8 @@
         <a href="https://www.instagram.com/trnsc.health/" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
         </a>
-        <a href="https://twitter.com" target="_blank" rel="noopener" class="social-icon mx-2">
-          <img src="/public/images/icons/x.svg" alt="Twitter (X)" width="24" height="24" />
+        <a href="https://www.threads.net/@trnsc.health" target="_blank" rel="noopener" class="social-icon mx-2">
+          <img src="/public/images/icons/threads-logo-black.svg" alt="Twitter (X)" width="24" height="24" />
         </a>
         <a href="mailto:trnsc.health@gmail.com" target="_blank" rel="noopener" class="social-icon mx-2">
           <img src="/public/images/icons/email.svg" alt="Email" width="24" height="24" />
