Update assoc. links add psyllium science

--- a/views/layouts/healthy_tips/toasted_nuts.html
+++ b/views/layouts/healthy_tips/toasted_nuts.html
@@ -41,7 +41,7 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="/public/styles/main.css">
-    <link rel="stylesheet" href="/public/styles/healthy_tips.css">
+    <link rel="stylesheet" href="/public/styles/healthy_tips/healthy_tips.css">
 </head>
 
 <body>
@@ -135,7 +135,7 @@
             
             <p><strong>1. Almonds:</strong> Almonds are technically seeds, not true nuts. They are packed with Vitamin E and fibre,
                 making them great for heart health.
-                <a href='https://amzn.to/483oK1Y' target='_blank' rel="noopener">Buy almonds (US/Can)</a>
+                <a href="https://amzn.to/3zS4ST0" target="_blank" rel="noopener">Buy almonds (EU/UK)</a> <a href='https://amzn.to/483oK1Y' target='_blank' rel="noopener">Buy almonds (US/Can)</a>
             </p>
             
             <p><strong>2. Peanuts:</strong> Peanuts are legumes but are commonly grouped with nuts due to their similar nutritional
