--- a/public/styles/healthy_tips/healthy_tips.css
+++ b/public/styles/healthy_tips/healthy_tips.css
@@ -65,3 +65,10 @@
     display: block;
     /* Ensures the button stays block level to center properly */
 }
+
+.half-size {
+    max-width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
