Fixed broken link on references in psyllium

--- a/views/layouts/healthy_tips/psyllium.html
+++ b/views/layouts/healthy_tips/psyllium.html
@@ -186,7 +186,7 @@
                     sensitivity.
                 </li>
                 <li>
-                    <a href="/mnt/data/kjim-2019-049.pdf" target="_blank" rel="noopener">Psyllium and Cardiovascular Health</a> - A
+                    <a href="https://pubmed.ncbi.nlm.nih.gov/32066221/" target="_blank" rel="noopener">Psyllium and Cardiovascular Health</a> - A
                     comprehensive analysis of psyllium’s impact on cholesterol levels, weight management, and overall heart health.
                 </li>
             </ul>
