--- a/public/styles/healthy_tips/healthy_tips.css
+++ b/public/styles/healthy_tips/healthy_tips.css
@@ -72,3 +72,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Mobile responsiveness */
+@media only screen and (max-width: 600px) {
+    .half-size {
+        max-width: 80%;
+    }
