Adjusted the arroz con pollo assoc. links

--- a/views/layouts/recipes/recipe_pages/arroz_con_pollo.html
+++ b/views/layouts/recipes/recipe_pages/arroz_con_pollo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Arroz Con Pollo with Smoked Paprika and Thickened Sauce : The Real Naked Swedish Chef</title>
+<title>Arroz Con Pollo with Smoked Paprika</title>
 
 <!-- Dynamic Meta Tags for Open Graph and Twitter -->
 <meta property="og:title" content="Arroz Con Pollo with Smoked Paprika and Thickened Sauce" />
