Removed "thickened" from title of arroz con pollo

--- a/views/layouts/recipes/recipe_pages/arroz_con_pollo.html
+++ b/views/layouts/recipes/recipe_pages/arroz_con_pollo.html
@@ -6,7 +6,7 @@
 <title>Arroz Con Pollo with Smoked Paprika</title>
 
 <!-- Dynamic Meta Tags for Open Graph and Twitter -->
-<meta property="og:title" content="Arroz Con Pollo with Smoked Paprika and Thickened Sauce" />
+<meta property="og:title" content="Arroz Con Pollo with Smoked Paprika" />
 <meta property="og:description"
     content="A vibrant and flavourful Arroz Con Pollo, perfect for a healthy, hearty dinner. This recipe includes smoked paprika and an option for a lightly thickened sauce." />
 <meta property="og:image" content="/public/images/recipes/arroz_con_pollo/arroz_con_pollo.jpg" />
@@ -14,7 +14,7 @@
     content="https://real-naked-swedish-chef.com/views/layouts/recipes/recipe_pages/arroz_con_pollo.html" />
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Arroz Con Pollo with Smoked Paprika and Thickened Sauce" />
+<meta name="twitter:title" content="Arroz Con Pollo with Smoked Paprika" />
 <meta name="twitter:description"
     content="A healthy and flavourful Arroz Con Pollo with smoked paprika and a thickened sauce option, ideal for low-carb and gluten-free diets." />
 <meta name="twitter:image" content="/public/images/recipes/arroz_con_pollo/arroz_con_pollo.jpg" />
